# stlc

./: README.md  dune-project  report.md  run_tests.py  solution.sh  stlc.opam  user.sh
lib/: ast.ml  ast.mli  dune  interpreter.ml  parser.mly  translator.ml  translator.mli  typechecker.ml  typechecker.mli
test/: dune
